--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "dev": "vite",
     
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
