--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "vite",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "-": "^0.0.1",
