--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "vite"
   },
   "dependencies": {
     "-": "^0.0.1",
